samples/_failures_safe/1761335841_04eaa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59d0a84b.c: In function ‘main’:
./samples/SAFE/__tmp_59d0a84b.c:172:20: error: missing terminating " character
  172 |             printf("Trigger history: %
      |                    ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_59d0a84b.c:172:13: error: expected expression at end of input
  172 |             printf("Trigger history: %
      |             ^~~~~~
./samples/SAFE/__tmp_59d0a84b.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59d0a84b.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59d0a84b.c:172:13: error: expected declaration or statement at end of input
